--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.1.3",
+    "php": ">=7.3",
     "fideloper/proxy": "^4.0",
-    "laravel/framework": "6.0",
+    "laravel/framework": "^6.0|^7.0|^8.0",
     "laravel/tinker": "^1.0",
     "musonza/chat": "^4.0",
     "pusher/pusher-php-server": "~4.0",
@@ -22,7 +22,7 @@
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
     "nunomaduro/collision": "^2.0",
-    "phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": "^8.0|^9.0"
   },
   "config": {
     "optimize-autoloader": true,
