--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "fideloper/proxy": "^4.0",
     "laravel/framework": "^6.0|^7.0|^8.0",
     "laravel/tinker": "^1.0",
-    "musonza/chat": "^4.0",
+    "musonza/chat": ">=4.5.0",
     "pusher/pusher-php-server": "~4.0",
     "spatie/laravel-fractal": "^5.6"
   },
@@ -21,7 +21,7 @@
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
-    "nunomaduro/collision": "^2.0",
+    "nunomaduro/collision": ">=2.0",
     "phpunit/phpunit": "^8.0|^9.0"
   },
   "config": {
