--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.3",
+    "laravel/ui" : ">=3.1.0",
     "fideloper/proxy": "^4.0",
     "laravel/framework": "^7.29|^8.12",
     "laravel/tinker": "^2.5.0",
