--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "npm run development",
     "development": "mix",
-     "watch": "mix watch",
+    "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
     "prod": "npm run production",
@@ -17,7 +17,12 @@
     "laravel-mix": "^6.0",
     "lodash": "^4.17.13",
     "popper.js": "^1.12",
-    "vue": "^2.6.14"
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
     "laravel-echo": "^1.5.0",
